# solver

./: CMakeLists.txt  LICENSE  README.md  run_install.sh
cmake/Modules/: .FindMKL.cmake.swp  FindMKL.cmake
plot/: .dyn_plot.py.swp  dyn_plot.py
src/: gaussJordan.f90  gaussjordan.mod  heatEquation.f90  laplace.f90  linearAlgebra.f90  linearSystSolver.f90  ls1_2d_adi_method.f90  ls1_global_variables.f90  ls1_linear_syst_solver.f90  ls1_main.f90  ls1_write_data.f90  para.f90  quantSolver.f90  sparseStorage.f90  writeData.f90
tools/: GenericName002.ext  dyn_plot2.py  dyn_plot3.py  test.py
tools/data/: GenericName001.ext  GenericName002.ext
